--- a/src/app/components/phone/phone.component.html
+++ b/src/app/components/phone/phone.component.html
@@ -136,7 +136,7 @@ For now, I'd like the data shown.  But, clicking a div makes that customer the a
         <button class="iconbutton-neumorphism float-right" (click)="showTimeHandled(i)" matTooltip="Time handled"
           matTooltipPosition="left">
           <i class="bi bi-hourglass-split"></i>
-        </button> -->
+        </button>
         <hr />
       </div>
     </div>
