--- a/src/app/components/admin-template/admin-template.component.css
+++ b/src/app/components/admin-template/admin-template.component.css
@@ -41,18 +41,27 @@
   box-shadow: none !important;
 }
 
-.no-input-container {
-  margin-top: 2.2rem;
+.type-container{
+  margin-top: 1.9rem;
+
 }
 
-.remove-btn-container {
-  margin-top: 0.8rem;
+
+.type-container .iconbutton-neumorphism {
+  margin: 0 !important;
 }
 
 ::ng-deep p-celleditor > p-dropdown > .p-dropdown,
-.form-row > div > ::ng-deep p-dropdown > .p-dropdown {
+.form-row > .type-container > .form-check > ::ng-deep p-dropdown > .p-dropdown, ::ng-deep .p-datatable .p-datatable-tfoot > tr > td ::ng-deep p-dropdown > .p-dropdown {
   border-bottom: none !important;
+  width: auto;
 }
+
+.form-row > .type-container > .form-check > ::ng-deep p-dropdown {
+  height: 2.6rem !important;
+  padding-top: 0 !important;
+}
+
 
 .form-row > div > ::ng-deep p-dropdown > .p-dropdown {
   width: 100%;
@@ -67,7 +76,11 @@
   animation: none;
 }
 
-.admin-template-table-container
+.admin-template-table-container ::ng-deep.p-datatable .p-datatable-thead>tr>th:first-child {
+  box-shadow: inset 6px 6px 17px -10px hsl(230, 4%, 73%), inset 0px -3px 0px -2px #d1d9e6 !important;
+}
+
+.table-status
   ::ng-deep
   .p-datatable
   .p-datatable-tbody
@@ -76,27 +89,32 @@
   box-shadow: none !important;
 }
 
-.admin-template-table-container
+.table-status
   ::ng-deep
   .p-datatable
   .p-datatable-tbody
   > tr:last-child
   > td:first-child {
-  box-shadow: inset 0px -26px 16px -24px #fff, inset -4px 0px 0px -2px #d1d9e6,
-    inset 24px -17px 8px -24px #b8b9be, inset 0px -13px 9px -11px #fff !important;
+    border-bottom-left-radius: 0 !important;
+    box-shadow: inset 24px -17px 8px -24px #b8b9be, inset -4px 0px 0px -2px #d1d9e6 !important;
+
 }
 
-.admin-template-table-container .sticky-column-checkboxes {
-  box-shadow: inset 5px 0 5px -4px #b8b9be, inset -4px 0px 0px -2px #d1d9e6 !important;
+.table-status ::ng-deep
+.p-datatable
+.p-datatable-tbody .sticky-column-checkboxes {
+  box-shadow: inset 5px 0 5px -4px #b8b9be, inset -4px 0px 0px -2px #d1d9e6;
 }
 
-.admin-template-table-container .sticky-checkboxes-main {
+.table-status ::ng-deep
+.p-datatable
+.p-datatable-tbody .sticky-checkboxes-main {
   box-shadow: inset 9px 9px 9px -9px #b8b9be, inset 0px -3px 0px -2px #d1d9e6,
     inset -4px 0px 0px -2px #d1d9e6 !important;
 }
 
 .admin-template-container {
-  min-width: 804px !important;
+  min-width: 576px !important;
   max-width: 100% !important;
   overflow-x: hidden !important;
   margin-bottom: 1rem !important;
@@ -109,6 +127,12 @@
   font-size: 0.9rem;
   border-radius: 2rem;
   padding: 0.55rem 0.9rem 0.55rem 0.9rem;
+}
+
+.delete-btn{
+  padding: 0.55rem 0.9rem 0.55rem 0.9rem !important;
+  font-size: 0.9rem !important;
+  border-radius: 2rem !important;
 }
 
 .activate-template-btn {
@@ -127,13 +151,23 @@
   margin-left: 0px;
 }
 
-.badge-status {
+.table-status .badge-status {
   border-radius: 2rem;
   padding-top: 0.4rem;
   padding-bottom: 0.4rem;
   margin-top: 1rem;
-  width: 53%;
-  margin-left: 20%;
+  height: 2.4rem;
+    max-width: 9rem;
+    margin-left: 25%;
+  color: white;
+}
+
+.create-template .badge-status {
+  border-radius: 2rem;
+  padding-top: 0.4rem;
+  padding-bottom: 0.4rem;
+  margin-top: 1rem;
+  height: 2.4rem;
   color: white;
 }
 
@@ -151,6 +185,7 @@
   background: transparent;
   border: none;
   z-index: 2;
+  text-align: center;
 }
 .badge-val {
   display: inline-flex;
@@ -162,10 +197,114 @@
   vertical-align: middle;
 }
 
-.create-template .badge-status {
-  padding-left: 3rem;
-  width: 90% !important;
-  margin-left: 0 !important;
-  color: white;
-  margin-top: 1.7rem;
+.create-template .badge-status, .remove-btn-container{
+  margin-top: 1.97rem !important;
 }
+
+.create-template  ::ng-deep.mat-form-field{
+  width: 96%;
+}
+
+.field-container ::ng-deep.mat-form-field{
+  width: 91%;
+
+}
+
+.section-status{
+  padding-left: .5rem !important;
+  padding-right: .5rem !important;
+}
+.create-template  ::ng-deep.mat-form-field-appearance-standard .mat-form-field-flex, .create-template  ::ng-deep.mat-form-field-appearance-standard .mat-form-field-infix{
+  width: 100%;
+}
+.create-template .badge-status {
+  width: 100% !important;
+  color: white;  
+  text-align: center;
+}
+
+.create-template ::ng-deep .mat-form-field-wrapper{
+  padding-bottom: 0 !important;
+}
+.template-label-container{
+  padding-top: .48rem;
+}
+
+.add-status-i{
+  min-width: 3rem;
+}
+
+::ng-deep .p-datatable .p-datatable-tfoot > tr > td{
+  background-color: #e6e7ee;
+  border-width:0;
+  border: none;
+  text-align: center;
+  font-weight: normal;
+  box-shadow: inset 0px -13px 9px -12px #fff;
+}
+
+::ng-deep .p-datatable .p-datatable-tfoot > tr {
+  border:none;
+  border-top: 0.0625rem solid #d1d9e6;
+  box-shadow: inset 5px 0 5px -4px #b8b9be, inset -4px 0px 0px -2px #d1d9e6;
+}
+
+::ng-deep .p-datatable .p-datatable-tfoot > tr > td:last-child{
+  box-shadow: inset -16px -15px 10px -13px #fff;
+}
+
+::ng-deep .p-datatable .p-datatable-tfoot > tr > td:first-child{
+  box-shadow: inset 0px -13px 9px -12px #fff, inset 24px -17px 8px -24px #b8b9be,  inset -4px 0px 0px -2px #d1d9e6 ;
+}
+
+.create-template-container{
+  padding: 0 1rem 0 1rem;
+}
+.section-add-status{
+  padding-top: 0.32rem !important;
+
+}
+
+.tag-btn, .cancel-tag-btn{
+  float: right;
+  margin-top: 0 !important;
+}
+  .badge-btn{
+    display: none;
+    width: 10rem !important;
+    margin-top: 0 !important;
+    font-weight: bold;
+    float: right;
+    text-align: center;
+    position: absolute;
+    right: 0rem;
+  }
+
+  .badge-btn:hover, .badge-btn:focus{
+    box-shadow: inset 2px 2px 5px #b8b9be;
+    animation: pulse 3s infinite;
+    outline: none;
+  }
+  .status-btn:hover .tag-btn,.status-btn:focus .tag-btn{
+    display: none;
+  }
+  
+  .status-btn:hover .badge-btn, .status-btn:focus .badge-btn{
+    display: inline-flex;
+  }
+
+  .status-title{
+    border-top: 2px dotted #cfcfd6;
+    border-bottom: 2px dotted #cfcfd6;
+    width: 100%;
+    text-align: center;
+    padding: 1rem 0rem 1rem 0rem;
+    color: #44476a;
+    margin-top: 1rem;
+    background-color: #e0e1e9;
+    border-radius: 1rem;
+  }
+
+  .status-name-container .input-neumorphism{
+    width: 94% !important;
+  }
