Settings connected to DB

--- a/src/app/partials/call-information/call-information.component.html
+++ b/src/app/partials/call-information/call-information.component.html
@@ -13,7 +13,7 @@
     </div>
   </div>
   <div class="col-lg-4">
-    <div class="phone-col">
+    <div class="phone-col" *ngIf="this.dbObjKey && this.userInfo">
       <phone-component></phone-component>
     </div>
   </div>
