--- a/src/app/partials/settings/settings.component.html
+++ b/src/app/partials/settings/settings.component.html
@@ -34,16 +34,16 @@
         >
           <i class="bi bi-headset i-neumorphism"></i>
         </button>
-        <button
-          (click)="editTemplate(index, 'vm')"
+        <!-- <button
+          (click)="editTemplate(index, vm.templateId, 'vm')"
           class="mini-iconbutton-neumorphism"
           matTooltip="R-Record "
           matTooltipPosition="above"
         >
           <i class="bi bi-mic-fill i-neumorphism"></i>
-        </button>
+        </button> -->
         <button
-          (click)="deleteTemplate(index, 'vm', vm.templateName)"
+          (click)="deleteTemplate(index, 'voicemail', vm.templateName, vm.templateId)"
           class="mini-iconbutton-neumorphism"
           matTooltip="Delete"
           matTooltipPosition="above"
@@ -86,7 +86,7 @@
           <i class="bi bi-chat-left-text i-neumorphism"></i>
         </button>
         <button
-          (click)="editTemplate(index, 'sms')"
+          (click)="editTemplate(index, sms.templateId, 'sms')"
           class="mini-iconbutton-neumorphism"
           matTooltip="Edit"
           matTooltipPosition="above"
@@ -94,7 +94,7 @@
           <i class="bi bi-pencil-square i-neumorphism"></i>
         </button>
         <button
-          (click)="deleteTemplate(index, 'sms', sms.templateName)"
+          (click)="deleteTemplate(index, 'textMessage', sms.templateName, sms.templateId)"
           class="mini-iconbutton-neumorphism"
           matTooltip="Delete"
           matTooltipPosition="above"
@@ -135,7 +135,7 @@
           <i class="bi bi-card-text i-neumorphism"></i>
         </button>
         <button
-          (click)="editTemplate(index, 'email')"
+          (click)="editTemplate(index, email.templateId, 'email')"
           class="mini-iconbutton-neumorphism"
           matTooltip="Edit"
           matTooltipPosition="above"
@@ -143,7 +143,7 @@
           <i class="bi bi-pencil-square i-neumorphism"></i>
         </button>
         <button
-          (click)="deleteTemplate(index, 'email', email.templateName)"
+          (click)="deleteTemplate(index, 'emails', email.templateName, email.templateId)"
           class="mini-iconbutton-neumorphism"
           matTooltip="Delete"
           matTooltipPosition="above"
@@ -221,26 +221,25 @@
               type="text"
               placeholder="Template name"
               formControlName="templateName"
-              onchange="this.value = this.templateName"
+              (ngModelChange)="templateNameChange($event)"
             />
           </mat-form-field>
         </div>
       </div>
       <div class="form-row width-100">
         <div class="col-md-12">
-
       
-                <div *ngIf="tglVM" style="text-align:center; margin: 25px;">
+                <div *ngIf="tglVM" style="margin: 25px;">
                     <button (click)="initiateRecording()" class="width-100 button-neumorphism" *ngIf="!recording"
                         style="cursor: pointer" > <i class="bi bi-record-btn-fill"></i> Start Recording </button>
                     <button (click)="stopRecording()" class="width-100 button-neumorphism" *ngIf="recording"
-                        style="cursor: pointer" > <i class="bi bi-slash-square-fill"></i>Stop Recording </button>
-                    <div class="clearfix"></div>
-                    <audio controls="" *ngIf="url"  class="width-100 button-neumorphism">
-                        <source [src]="sanitize(url)" type="audio/wav">
-                    </audio>
+                        style="cursor: pointer" > <i class="bi bi-slash-square-fill"></i> Stop Recording </button>
+                    <div *ngIf="url">
+                        <audio controls="" *ngIf="url" class="width-100 button-neumorphism">
+                            <source [src]="sanitize(url)" type="audio/wav"> 
+                        </audio> <span (click)="saveVoicemail()">save</span>
+                    </div>
                 </div>
-
 
           <p-editor
             *ngIf="tglEmail && tglPrevTemplate === ''"
@@ -273,6 +272,7 @@
       <div class="form-row width-100" *ngIf="tglPrevTemplate === ''">
         <div class="col-md-6">
           <button
+            *ngIf="!tglVM"
             [disabled]="!templateForm.valid"
             [ngClass]="
               !templateForm.valid
@@ -284,6 +284,7 @@
           >
             Save
           </button>
+          
         </div>
         <div class="col-md-6">
           <button
