--- a/src/app/components/table/table.component.css
+++ b/src/app/components/table/table.component.css
@@ -564,3 +564,7 @@ form {
   border-bottom: none !important;
   width: auto;
 }
+
+::ng-deep .p-fileupload .p-fileupload-buttonbar .p-button {
+  width: min-content !important;
+}
