Working with Twilio

--- a/src/app/components/phone/phone.component.html
+++ b/src/app/components/phone/phone.component.html
@@ -61,6 +61,7 @@
     </div>
   </div>
   <div class="form-row">
+    <div (click)="testBtn()" >testBtn</div>
     <div class="col-4 button-inline">
       <p-dropdown [options]="optVoiceMail" class="button-neumorphism" (onChange)="leaveVoiceMail()"
         optionLabel="templateName" optionValue="templateId" placeholder="VM" [formControl]="voiceMailLeft"></p-dropdown>
